2010-03-09  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIORChan.c: [Bug 2936225]: Thanks to Alexandre Ferrieux
	* doc/refchan.n: <ferrieux@users.sourceforge.net> for debugging and fixing
	* tests/ioCmd.test: the problem. It is the write-side equivalent
	to the bug fixed 2009-08-06.

2010-03-09  Don Porter  <dgp@users.sourceforge.net>

	* library/tzdata/America/Matamoros: New locale
	* library/tzdata/America/Ojinaga: New locale
	* library/tzdata/America/Santa_Isabel: New locale
	* library/tzdata/America/Asuncion:
	* library/tzdata/America/Tijuana:
	* library/tzdata/Antarctica/Casey:
	* library/tzdata/Antarctica/Davis:
	* library/tzdata/Antarctica/Mawson:
	* library/tzdata/Asia/Dhaka:
	* library/tzdata/Pacific/Fiji:
	Olson tzdata2010c.

2010-03-07  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclTest.c       test that tclOO stubs are present in stub library
	* generic/tclOOMethod.c   Applied missing part of [Patch 2961556]
	* win/tclWinInt.h         Change all tclWinProcs signatures to use
	* win/tclWin32Dll.c       TCHAR* in stead of WCHAR*. This is meant
	* win/tclWinDde.c         as preparation to make [Enh 2965056]
	* win/tclWinFCmd.c        possible at all.
	* win/tclWinFile.c
	* win/tclWinPipe.c
	* win/tclWinSock.c

2010-03-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclStubLib.c  remove presence of tclTomMathStubsPtr here
	* generic/tclTest.c     test that tommath stubs are present in stub library

2010-03-05  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclIORTrans.c (ForwardProc): [Bug 2964425]: When cleaning
	the stables, it is sometimes necessary to do more than the minimum. In
	this case, rationalizing the variables for a forwarded limit? method
	required removing an extra Tcl_DecrRefCount too.

	* generic/tclOO.h, generic/tclOOInt.h: [Patch 2961556]: Change TclOO
	to use the same style of function typedefs as Tcl, as this is about
	the last chance to get this right.

	***POTENTIAL INCOMPATIBILITY***