@@ -2,3 +2,4 @@ Makefile
 *.bundle
 *.dylib
 *.dll
+*.so
